# anime_ratings

./: pyproject.toml  scrapy.cfg
anime_ratings/: items.py  middlewares.py  pipelines.py  settings.py
anime_ratings/analyzers/: aggregation.ipynb  anime_fixed.csv
anime_ratings/spiders/: s1vote.py  saraba1st.py
